moved style into style tag and removed style.css

--- a/index.html
+++ b/index.html
@@ -4,25 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>team</title>
+    <title>My Team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <style>
+        header {
+            background-color:rebeccapurple;
+            padding: 2%;
+        }
+        #title {
+            color: white;
+            text-align: center;
+        }
+        h1 {
+            font-size: 50px;
+        }
+        #cards {
+            width: 100%;
+        }
+        .employee {
+            margin: auto;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+        .emp-row {
+            margin: auto;
+            margin-top: 3%;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1 id="title">team</h1>
+        <h1 id="title">My Team</h1>
     </header>
     <div class="container" id="cards">
         <div class="row emp-row">
             <div class="col-md-4">
                 <div class="card employee" style="width: 22rem; height:17rem;">
                     <div class="card-body">
-                        <h4 class="card-title">man</h5>
+                        <h4 class="card-title">Mark</h5>
                         <h4 class="card-title">Manager</h5>
                         <br>
                         <ul class="list-group">
-                            <li class="list-group-item">ID: id</li>
-                            <a href = "mailto: email"><li class="list-group-item">Email: email</li></a>
+                            <li class="list-group-item">ID: M</li>
+                            <a href = "mailto: mark@manager.com"><li class="list-group-item">Email: mark@manager.com</li></a>
                             <li class="list-group-item">Office Number: 1</li>
                         </ul>
                     </div>
@@ -31,13 +57,13 @@
             <div class="col-md-4">
                 <div class="card employee" style="width: 22rem; height:17rem;">
                     <div class="card-body">
-                        <h4 class="card-title">eng</h5>
+                        <h4 class="card-title">Alex</h5>
                         <h4 class="card-title">Engineer</h5>
                         <br>
                         <ul class="list-group">
-                            <li class="list-group-item">ID: id</li>
-                            <a href = "mailto: email"><li class="list-group-item">Email: email</li></a>
-                            <a href="https://github.com/git/" target="_blank"><li class="list-group-item">GitHub: git</li></a>
+                            <li class="list-group-item">ID: E0</li>
+                            <a href = "mailto: arowe890@gmail.com"><li class="list-group-item">Email: arowe890@gmail.com</li></a>
+                            <a href="https://github.com/TopGek99/" target="_blank"><li class="list-group-item">GitHub: TopGek99</li></a>
                         </ul>
                     </div>
                 </div>
@@ -45,13 +71,43 @@
             <div class="col-md-4">
                 <div class="card employee" style="width: 22rem; height:17rem;">
                     <div class="card-body">
-                        <h4 class="card-title">int</h5>
+                        <h4 class="card-title">Erica</h5>
+                        <h4 class="card-title">Engineer</h5>
+                        <br>
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: E1</li>
+                            <a href = "mailto: erica@engineer.com"><li class="list-group-item">Email: erica@engineer.com</li></a>
+                            <a href="https://github.com/erica/" target="_blank"><li class="list-group-item">GitHub: erica</li></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row emp-row">
+            <div class="col-md-6">
+                <div class="card employee" style="width: 22rem; height:17rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">Ewan</h5>
+                        <h4 class="card-title">Engineer</h5>
+                        <br>
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: E2</li>
+                            <a href = "mailto: ewan@engineer.com"><li class="list-group-item">Email: ewan@engineer.com</li></a>
+                            <a href="https://github.com/ewan/" target="_blank"><li class="list-group-item">GitHub: ewan</li></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card employee" style="width: 22rem; height:17rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">Ian</h5>
                         <h4 class="card-title">Intern</h5>
                         <br>
                         <ul class="list-group">
-                            <li class="list-group-item">ID: id</li>
-                            <a href = "mailto: email"><li class="list-group-item">Email: email</li></a>
-                            <li class="list-group-item">School: uofa</li>
+                            <li class="list-group-item">ID: I0</li>
+                            <a href = "mailto: ian@intern.com"><li class="list-group-item">Email: ian@intern.com</li></a>
+                            <li class="list-group-item">School: The University of Adelaide</li>
                         </ul>
                     </div>
                 </div>
